--- a/extscript-core-root/extscript-myfaces12-extensions/pom.xml
+++ b/extscript-core-root/extscript-myfaces12-extensions/pom.xml
@@ -48,7 +48,7 @@
             <groupId>com.sun.facelets</groupId>
             <artifactId>jsf-facelets</artifactId>
             <version>1.1.11</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
@@ -56,12 +56,7 @@
             <version>1.8.0</version>
         </dependency>
 
-        <dependency>
-            <groupId>commons-el</groupId>
-            <artifactId>commons-el</artifactId>
-            <version>1.0</version>
-            <scope>compile</scope>
-        </dependency>
+       
     </dependencies>
 
     <profiles>
