--- a/extscript-examples/myfaces20-example/pom.xml
+++ b/extscript-examples/myfaces20-example/pom.xml
@@ -78,6 +78,7 @@
         </dependency>
 
         <!-- bean validation dependencies -->
+        
          <dependency>
             <groupId>org.apache.myfaces.extensions.validator</groupId>
             <artifactId>myfaces-extval-core</artifactId>
@@ -93,13 +94,30 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.myfaces.extensions.validator.validation-modules</groupId>
-            <artifactId>myfaces-extval-bean-validation</artifactId>
+ 	        <groupId>org.apache.myfaces.extensions.validator.validation-modules</groupId>
+ 	        <artifactId>myfaces-extval-bean-validation</artifactId> 
             <version>2.0.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+         	<groupId>org.hibernate</groupId>
+         	<artifactId>hibernate-validator</artifactId>
+        	<version>4.0.0.GA</version>
+    	</dependency> 
 
-        
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.4.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.4.2</version>
+        </dependency>
+          
+
         <dependency>
             <groupId>org.apache.myfaces.tomahawk</groupId>
             <artifactId>tomahawk</artifactId>
