--- a/extscript-examples/pom.xml
+++ b/extscript-examples/pom.xml
@@ -4,11 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>extscript-examples</artifactId>
     <packaging>pom</packaging>
-    <name>examples submodule</name>
+    <name>Examples Submodule</name>
     <version>1.0-SNAPSHOT</version>
 
     <description>
-        groovy myfaces core engine meta project
+        Examples Meta Project, see the subprojects
+        for starting various parts of ext-scripting
     </description>
 
     <parent>
@@ -51,6 +52,10 @@
 
 
     <profiles>
+        <!--
+             This profile is started with -D development and fetches in a secondary
+             web.xml which is used internally for development purposes
+         -->
         <profile>
             <id>development</id>
 
