--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <myfaces12.version>1.2.8</myfaces12.version>
         <myfaces2.version>2.0.0</myfaces2.version>
         <groovy.version>1.7.1</groovy.version>
-        <extval.version>2.0.4-SNAPSHOT</extval.version>
+        <extval.version>2.0.3</extval.version>
     </properties>
 
     <description>
