--- a/extscript-examples/spring-example/src/main/webapp/WEB-INF/web.xml
+++ b/extscript-examples/spring-example/src/main/webapp/WEB-INF/web.xml
@@ -61,7 +61,7 @@
             of the deployment dir
         </description>
         <param-name>org.apache.myfaces.extensions.scripting.groovy.LOADER_PATHS</param-name>
-        <param-value>D:/dev/work/ideaprojects/threads/extscript/examples/spring-example/src/main/webapp/WEB-INF/groovy
+        <param-value>/Users/werpu2/development/workspace/extension-scripting4/extscript-examples/spring-example/src/main/webapp/WEB-INF/groovy
         </param-value>
     </context-param>
 
@@ -70,7 +70,7 @@
             of the deployment dir
         </description>
         <param-name>org.apache.myfaces.extensions.scripting.java.LOADER_PATHS</param-name>
-        <param-value>D:/dev/work/ideaprojects/threads/extscript/examples/spring-example/src/main/webapp/WEB-INF/java
+        <param-value>/Users/werpu2/development/workspace/extension-scripting4/extscript-examples/spring-example/src/main/java
         </param-value>
     </context-param>
 
@@ -223,33 +223,7 @@
 
 
     <!-- Extensions Filter -->
-    <filter>
-        <filter-name>extensionsFilter</filter-name>
-        <filter-class>org.apache.myfaces.webapp.filter.ExtensionsFilter</filter-class>
-        <init-param>
-            <description>Set the size limit for uploaded files.
-                Format: 10 - 10 bytes
-                10k - 10 KB
-                10m - 10 MB
-                1g - 1 GB
-            </description>
-            <param-name>uploadMaxFileSize</param-name>
-            <param-value>100m</param-value>
-        </init-param>
-        <init-param>
-            <description>Set the threshold size - files
-                below this limit are stored in memory, files above
-                this limit are stored on disk.
 
-                Format: 10 - 10 bytes
-                10k - 10 KB
-                10m - 10 MB
-                1g - 1 GB
-            </description>
-            <param-name>uploadThresholdSize</param-name>
-            <param-value>100k</param-value>
-        </init-param>
-    </filter>
 
     <filter>
         <filter-name>scriptingFilter</filter-name>
@@ -262,15 +236,6 @@
         <dispatcher>FORWARD</dispatcher>
         <dispatcher>INCLUDE</dispatcher>
         <dispatcher>ERROR</dispatcher>
-    </filter-mapping>
-
-    <filter-mapping>
-        <filter-name>extensionsFilter</filter-name>
-        <url-pattern>*.jsf</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>extensionsFilter</filter-name>
-        <url-pattern>/faces/*</url-pattern>
     </filter-mapping>
 
     <!-- Listener, to allow Jetty serving MyFaces apps -->
