--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <properties>
         <myfaces12.version>1.2.8</myfaces12.version>
-        <myfaces2.version>2.0.0</myfaces2.version>
+        <myfaces2.version>2.0.1-SNAPSHOT</myfaces2.version>
         <groovy.version>1.7.1</groovy.version>
         <extval.version>2.0.3</extval.version>
     </properties>
